replaced inefficient use of constructors for Integer, Long, Float and Double by the recommended static valueOf methods that cache results
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/branches/MATH_2_0/src/experimental@666292 13f79535-47bb-0310-9956-ffa450edef68